# RabbitBin

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE  Legal.txt  README.md  aggregateContigOverlapsByBin.pl  license.txt  merge_abundances.py  run_rabbitbin.sh  version.h
cmake/: htslib.cmake  version.cpp.in  zlib.cmake
cmake/Modules/: GetVersion.cmake
scripts/: apply_tier12.py  finish_tier12.py  rabbitbin_markers.sh
src/: BamUtils.h  CMakeLists.txt  CheckRead.hpp  IOThreadBuffer.h  KseqReader.h  RunningStats.h  SafeOfstream.hpp  contigOverlaps.cpp  fkmv_embed.h  inv_index_embed.h  jgi_summarize_bam_contig_depths.cpp  jgi_summarize_bam_contig_depths.h  probmh.cpp  probmh.h  rabbit_depth.cpp  rabbit_depth.h  rabbit_depth_fuse.h  rabbit_invidx.h  rabbit_overlap.cpp  rabbit_sketch.h  rabbitbin.cpp  rabbitbin.h  rb_map.cpp  rb_map_cli.h
src/align/: rb_align.cpp  rb_align_api.h  rb_strobe.cpp  rb_strobe.h  sa_index.cpp  sa_index.h  sa_map.cpp  sa_map.h  sa_seed.h
src/align/strobe/: sam.cpp  sam.hpp
src/bamindex/: rb_index.cpp
src/bamsort/: rb_bam_sort.h  rb_sort.cpp
src/impl/: rb_abundance.cpp  rb_amber.cpp  rb_cache.cpp  rb_certify.cpp  rb_cluster.cpp  rb_graph.cpp  rb_output.cpp  rb_qc.cpp  rb_split.cpp  rb_strain.cpp
src/rabbitbam/: BamCompleteBlock.cpp  BamCompress.cpp  BamRead.cpp  BamReader.cpp  BamReader.h  BamTools.cpp  BamTools.h
test/: CMakeLists.txt  contigs.fa  malformed_softclip_only.bam  malformed_softclip_only.sam
